--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,11 @@ dnspython
 
 pymongo==3.11.4
 
-dash
+dash~=1.20.0
 GitPython
 mysql-connector
 
 # Automated tests
 pytest==3.0.5
 pytest-cov==2.4.0
+mysql-connector-python~=8.0.25
