--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "helmet": "^4.2.0",
     "morgan": "^1.10.0",
+    "mssql": "^7.1.3",
+    "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
