--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.7.2",
     "@nestjs/typeorm": "^7.1.5",
+    "applicationinsights": "^2.1.3",
     "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
