--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "0.6.3",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/jwt": "^7.2.0",
+    "@nestjs/passport": "^7.1.6",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.7.2",
     "@nestjs/typeorm": "^7.1.5",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -38,6 +41,8 @@
     "morgan": "^1.10.0",
     "mssql": "^7.1.3",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
@@ -51,6 +56,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/passport-jwt": "^3.0.5",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
