--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "helmet": "^4.2.0",
+    "js-sha256": "^0.9.0",
     "morgan": "^1.10.0",
     "mssql": "^7.1.3",
     "mysql2": "^2.2.5",
