--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
     "swagger-ui-express": "^4.1.5",
@@ -58,6 +60,8 @@
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
     "@types/passport-jwt": "^3.0.5",
+    "@types/request": "^2.48.6",
+    "@types/request-promise-native": "^1.0.18",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
