--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.15",
-    "@nestjs/config": "0.6.3",
-    "@nestjs/core": "^7.6.15",
-    "@nestjs/jwt": "^7.2.0",
-    "@nestjs/passport": "^7.1.6",
-    "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/swagger": "^4.7.2",
-    "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/common": "^8.0.4",
+    "@nestjs/config": "^1.0.0",
+    "@nestjs/core": "^8.0.4",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.4",
+    "@nestjs/swagger": "^5.0.4",
+    "@nestjs/typeorm": "^8.0.1",
     "applicationinsights": "^2.1.3",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
@@ -49,14 +49,14 @@
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.1.5",
     "typeorm": "^0.2.34"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.6.0",
-    "@nestjs/schematics": "^7.3.0",
-    "@nestjs/testing": "^7.6.18",
+    "@nestjs/cli": "^8.0.2",
+    "@nestjs/schematics": "^8.0.2",
+    "@nestjs/testing": "^8.0.4",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
@@ -76,7 +76,7 @@
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
