--- a/.github/workflows/prd.yaml
+++ b/.github/workflows/prd.yaml
@@ -1,4 +1,4 @@
-name: CI/CD Prd
+name: CI/CD PRD
 
 on:
   push:
@@ -14,7 +14,7 @@ env:
 
 jobs:
   build-and-deploy:
-    name: Build and deploy
+    name: Build and deploy to PRD
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -30,7 +30,7 @@ jobs:
           npm install
           npm run build
 
-      - name: Deploy to Azure App Service
+      - name: Deploy to Azure App Service (PRD)
         uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
