--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "morgan": "^1.10.0",
     "mssql": "^7.1.3",
     "mysql2": "^2.2.5",
+    "nestjs-real-ip": "^2.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
