--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@defichain/jellyfish-network": "^0.40.0",
     "@nestjs/common": "^8.0.4",
     "@nestjs/config": "^1.0.0",
     "@nestjs/core": "^8.0.4",
@@ -34,6 +35,7 @@
     "applicationinsights": "^2.1.3",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "bitcoinjs-message": "^2.2.0",
     "chalk": "^4.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
