--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "api-dfx",
-  "version": "0.0.1",
+  "name": "dfx-api",
+  "version": "0.1.0",
   "description": "",
   "author": "",
   "private": true,
