--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.6.0",
     "@defichain/jellyfish-network": "^0.40.0",
+    "@nestjs-modules/mailer": "^1.6.0",
+    "@nestjs/axios": "^0.0.1",
     "@nestjs/common": "^8.0.4",
     "@nestjs/config": "^1.0.0",
     "@nestjs/core": "^8.0.4",
