--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^8.0.4",
+    "@nestjs/schedule": "^1.0.1",
     "@nestjs/swagger": "^5.0.4",
     "@nestjs/typeorm": "^8.0.1",
     "applicationinsights": "^2.1.6",
