--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express-useragent": "^1.0.15",
     "handlebars": "^4.7.7",
     "helmet": "^4.2.0",
     "morgan": "^1.10.0",
@@ -66,6 +67,7 @@
     "@nestjs/schematics": "^8.0.2",
     "@nestjs/testing": "^8.0.4",
     "@types/express": "^4.17.11",
+    "@types/express-useragent": "^1.0.1",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
     "@types/nodemailer": "^6.4.4",
