--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@defichain/jellyfish-api-core": "^0.45.1",
+    "@defichain/jellyfish-api-jsonrpc": "^0.45.1",
     "@defichain/jellyfish-network": "^0.40.0",
     "@nestjs-modules/mailer": "^1.6.0",
     "@nestjs/axios": "^0.0.1",
