--- a/.github/workflows/api-dev.yaml
+++ b/.github/workflows/api-dev.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install packages and build
         run: |
-          npm install
+          npm ci
           npm run build
 
       - name: Deploy to Azure App Service (DEV)
