--- a/.github/workflows/node-dev.yaml
+++ b/.github/workflows/node-dev.yaml
@@ -24,7 +24,7 @@ jobs:
         with:
           azcliversion: 2.0.72
           inlineScript: |
-            az webapp config container set --resource-group rg-dfx-api-dev --name app-dfx-node-dev --multicontainer-config-type compose --multicontainer-config-file infrastructure/defi-node-test.yml --slot stg
+            az webapp config container set --resource-group rg-dfx-api-dev --name app-dfx-node-dev --enable-app-service-storage true --multicontainer-config-type compose --multicontainer-config-file infrastructure/defi-node-test.yml --slot stg
       
       - name: Logout
         run: |
