--- a/infrastructure/docker/defi-node-main.yml
+++ b/infrastructure/docker/defi-node-main.yml
@@ -1,18 +1,18 @@
 version: '3.7'
 
 services:
-
-  defi-mainnet:
+  mainnet-node:
     image: defi/defichain:1.8.4
     restart: always
     ports:
-    - "8000:18554"
+      - '8000:8555'
     volumes:
-    - ${WEBAPP_STORAGE_HOME}/data:/data
+      - node-data:/data
     command: >
       defid
       -rpcallowip=0.0.0.0/0
       -rpcbind=0.0.0.0
       -rpcauth=dfx-api:5b7790834236ab3ec18e79933dbfae77$90ec34d4954d5c2579f006805dbdf597d316b56434a7bd9d8728dde669dfe94a
+      -wallet=dfx-api
+      -addresstype=bech32
       -spv=0
-      -testnet
