--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express-useragent": "^1.0.15",
+    "fast-xml-parser": "^3.21.0",
     "handlebars": "^4.7.7",
     "helmet": "^4.2.0",
     "morgan": "^1.10.0",
@@ -72,6 +73,7 @@
     "@types/express": "^4.17.11",
     "@types/express-useragent": "^1.0.1",
     "@types/jest": "^26.0.22",
+    "@types/multer": "^1.4.7",
     "@types/node": "^14.14.36",
     "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.5",
