--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start:debug": "nest start --debug --watch",
     "start:develop": "SET NODE_ENV=develop& node dist/main",
     "start:prod": "SET NODE_ENV=master& node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --no-fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
