--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start:develop": "SET NODE_ENV=develop& node dist/main",
     "start:prod": "SET NODE_ENV=master& node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --no-fix",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
