--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "xoauth2": "^1.2.0"
   },
   "devDependencies": {
+    "@golevelup/ts-jest": "^0.3.2",
     "@nestjs/cli": "^8.0.2",
     "@nestjs/schematics": "^8.0.2",
     "@nestjs/testing": "^8.0.4",
