--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "helmet": "^4.2.0",
     "morgan": "^1.10.0",
     "mssql": "^7.2.0",
+    "nestjs-i18n": "^8.2.2",
     "nestjs-real-ip": "^2.0.0",
     "nodemailer": "^6.6.3",
     "passport": "^0.4.1",
