Add timestamp to version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "löschen",
         "nestjs",
         "Organisation",
+        "originalname",
         "phonenumber",
         "typeorm",
         "überflüssige",
