Added masternode API, added IEntity class, updated roles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,11 @@
         "firstname",
         "Kauf",
         "löschen",
+        "masternode",
         "nestjs",
         "Organisation",
         "phonenumber",
+        "timelock",
         "typeorm",
         "überflüssige",
         "Verkauf",
