Refactoring, added DeFiChain Income role

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "ändern",
         "Bitstamp",
         "Datas",
+        "DEFICHAIN",
         "firstname",
         "Kauf",
         "löschen",
