Added CFP votes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,8 @@
         "überflüssige",
         "Verkauf",
         "wenn"
-    ]
+    ],
+    "files.exclude": {
+        "node_modules": true
+    },
 }
