Update spider if mail or phone change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "ändern",
+        "authorises",
         "Bitstamp",
+        "citizenships",
         "Datas",
         "DEFICHAIN",
         "firstname",
