Trigger dev workflow on PR to master

--- a/.github/workflows/api-dev.yaml
+++ b/.github/workflows/api-dev.yaml
@@ -3,6 +3,11 @@ name: API DEV CI/CD
 on:
   push:
     branches: [ develop ]
+  pull_request:
+    types:
+      - opened
+    branches:    
+      - master
   workflow_dispatch:
 
 env:
