--- a/.github/workflows/api-pr.yaml
+++ b/.github/workflows/api-pr.yaml
@@ -12,6 +12,7 @@ env:
 jobs:
   build:
     name: Build and test
+    if:  github.head_ref != 'develop'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
