Add staking to statistic route (count of masternodes, rewards, yield) Add masternode route to statistic (list of dfx masternodes)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,38 @@
 {
-    "cSpell.words": [
-        "authorises",
-        "Bitstamp",
-        "citizenships",
-        "Datas",
-        "DEFICHAIN",
-        "firstname",
-        "Kauf",
-        "masternode",
-        "nestjs",
-        "Organisation",
-        "originalname",
-        "phonenumber",
-        "timelock",
-        "typeorm",
-        "utxo",
-        "Verkauf",
-    ],
-    "files.exclude": {
-        "node_modules": true
-    },
-    "prettier.printWidth": 120,
+  "cSpell.words": [
+    "APPINSIGHTS",
+    "authorises",
+    "Bitstamp",
+    "ccxt",
+    "citizenships",
+    "Datas",
+    "DEFICHAIN",
+    "DFIP",
+    "firstname",
+    "golevelup",
+    "IBAN",
+    "INSTRUMENTATIONKEY",
+    "Kauf",
+    "masternode",
+    "masternodes",
+    "nestjs",
+    "oflags",
+    "orderbook",
+    "Organisation",
+    "originalname",
+    "phonenumber",
+    "respository",
+    "signmessage",
+    "timelock",
+    "txid",
+    "typeorm",
+    "utxo",
+    "Utxos",
+    "Verkauf",
+    "vout"
+  ],
+  "files.exclude": {
+    "node_modules": true
+  },
+  "prettier.printWidth": 120
 }
