--- a/infrastructure/docker/defi-node-loc.yml
+++ b/infrastructure/docker/defi-node-loc.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   testnet-node:
-    image: defi/defichain:2.6.1
+    image: defi/defichain:2.7.0-alpha
     restart: always
     ports:
       - '8000:18554'
