Add send letter Add monitoring

--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express-useragent": "^1.0.15",
     "fast-xml-parser": "^4.0.3",
     "handlebars": "^4.7.7",
     "helmet": "^5.0.2",
+    "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "mssql": "^6.3.1",
     "nestjs-i18n": "^8.2.2",
