--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express-useragent": "^1.0.15",
     "fast-xml-parser": "^4.0.3",
     "handlebars": "^4.7.7",
