set up method structure for buy process

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,8 @@ NODE_DEX_URL_ACTIVE=
 NODE_OUT_URL_ACTIVE=
 NODE_REF_URL_ACTIVE=
 NODE_WALLET_PASSWORD=
+DEX_WALLET_ADDRESS=
+OUT_WALLET_ADDRESS=
 STAKING_WALLET_ADDRESS=
 UTXO_SPENDER_ADDRESS=
 LETTER_USER=
