added mail recipients configuration

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ MAIL_PASS=
 GH_TOKEN=
 NODE_USER=
 NODE_PASSWORD=
+NODE_INP_URL_ACTIVE=
 NODE_DEX_URL_ACTIVE=
 NODE_OUT_URL_ACTIVE=
 NODE_REF_URL_ACTIVE=
@@ -29,3 +30,6 @@ UTXO_SPENDER_ADDRESS=
 LETTER_USER=
 LETTER_AUTH=
 LETTER_URL=
+SUPPORT_MAIL=
+MONITORING_MAIL=
+NOREPLY_MAIL=
