--- a/infrastructure/docker/defi-node-dev.yml
+++ b/infrastructure/docker/defi-node-dev.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   testnet-node:
-    image: defi/defichain:2.8.0
+    image: defi/defichain:2.9.0
     restart: always
     ports:
       - '8000:18554'
@@ -17,3 +17,8 @@ services:
       -addresstype=bech32
       -spv=0
       -testnet=1
+      -addnode=89.58.14.177:18555
+      -addnode=185.233.105.172:18555
+      -addnode=154.53.43.103:18555
+      -addnode=161.97.90.159:18555
+      -addnode=194.233.89.209:18555
