--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "fast-xml-parser": "^4.0.3",
     "handlebars": "^4.7.7",
     "helmet": "^5.0.2",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mssql": "^6.3.1",
     "nestjs-i18n": "^8.2.2",
@@ -76,6 +77,7 @@
     "@types/express": "^4.17.13",
     "@types/express-useragent": "^1.0.2",
     "@types/jest": "^27.4.0",
+    "@types/lodash": "^4.14.182",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.18",
     "@types/nodemailer": "^6.4.4",
