[DEV-378] Basic PoC structure:
commit 56f9b70ff179713a6165c67ca1c2227acd0a300f
Author: Anton Semikin <tony.semikin@gmail.com>
Date:   Tue Jul 12 14:28:48 2022 +0200

    interim progress on full structure

commit 77e9aab2d69ad4bc3072bd4db86ad4d72559d877
Author: Anton Semikin <tony.semikin@gmail.com>
Date:   Mon Jul 11 13:00:06 2022 +0200

    basic buy crypto scaffolding

commit e1e15fe6c0d68adae6a10681cb80fa09738f35a8
Author: Anton Semikin <tony.semikin@gmail.com>
Date:   Mon Jul 11 12:59:57 2022 +0200

    wip

commit 7c8da8d01cf3e14b0bca213ae58b8ccda0ccd01a
Author: Anton Semikin <tony.semikin@gmail.com>
Date:   Mon Jul 11 09:20:23 2022 +0200

    interim progress on reworking buy crypto process

commit d27017cc539fb33b8b979932af2759666c118594
Author: Anton Semikin <tony.semikin@gmail.com>
Date:   Thu Jul 7 09:12:12 2022 +0200

    first working example

commit c9ea6c89d61f274019df904b667c0cc996ae2b78
Author: Anton Semikin <tony.semikin@gmail.com>
Date:   Fri Jul 8 08:03:53 2022 +0200

    micro adjustment on method order and access modifier

commit bc66cd9e41890cb9c1dc066e176d4c3bb4d7c56e
Merge: 166677fb 0c04aea6
Author: TonySemikin <tony.semikin@gmail.com>
Date:   Thu Jul 7 21:29:18 2022 +0200

    Merge pull request #290 from DFXswiss/feature/node-health-monitoring

    [DEV-173] Refactored Node Health Monitoring

commit 0c04aea603652f16af8f8f63693242832c59bb73
Author: David May <david.leo.may@gmail.com>
Date:   Thu Jul 7 17:46:07 2022 +0200

    Refactored node health monitoring

commit 166677fb3e99542a4cc83aa163f301f6d31ee5e2
Author: Anton Semikin <tony.semikin@gmail.com>
Date:   Thu Jul 7 17:36:40 2022 +0200

    final reliability changes

commit 355b41e305124c3631ea2aac15a92d2ea5005547
Author: Anton Semikin <tony.semikin@gmail.com>
Date:   Thu Jul 7 16:42:49 2022 +0200

    reliability improvements

commit 552657fa1bd7a8195e6cf8cc9c36d65a312fab3a
Author: Anton Semikin <tony.semikin@gmail.com>
Date:   Thu Jul 7 07:55:47 2022 +0200

    addressed comments par

--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "@nestjs/common": "^8.3.1",
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.3.1",
+    "@nestjs/cqrs": "^8.0.5",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.3.1",
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/uuid": "^8.3.4",
     "applicationinsights": "^2.2.1",
     "axios": "^0.26.0",
     "basic-ftp": "^4.6.6",
@@ -67,6 +69,7 @@
     "rxjs": "^7.5.4",
     "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.43",
+    "uuid": "^8.3.2",
     "xoauth2": "^1.2.0"
   },
   "devDependencies": {
