--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,7 @@ NODE_REF_URL_ACTIVE=
 NODE_WALLET_PASSWORD=
 DEX_WALLET_ADDRESS=
 OUT_WALLET_ADDRESS=
+INT_WALLET_ADDRESS=
 STAKING_WALLET_ADDRESS=
 UTXO_SPENDER_ADDRESS=
 LETTER_USER=
