[DEV-667] added ethereum configuration

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,10 @@ OUT_WALLET_ADDRESS=
 INT_WALLET_ADDRESS=
 STAKING_WALLET_ADDRESS=
 UTXO_SPENDER_ADDRESS=
+ETH_WALLET_ADDRESS=
+ETH_WALLET_PRIVATE_KEY=
+ETH_GATEWAY_URL=
+ETH_EXPLORER_URL=
 LETTER_USER=
 LETTER_AUTH=
 LETTER_URL=
