[DEV-667] added bnb clone of ethereum

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,11 @@ ETH_WALLET_PRIVATE_KEY=
 ETH_GATEWAY_URL=
 ETH_API_KEY=
 ETH_EXPLORER_URL=
+BNB_WALLET_ADDRESS=
+BNB_WALLET_PRIVATE_KEY=
+BNB_GATEWAY_URL=
+BNB_API_KEY=
+BNB_EXPLORER_URL=
 LETTER_USER=
 LETTER_AUTH=
 LETTER_URL=
