--- a/.env.example
+++ b/.env.example
@@ -37,11 +37,10 @@ ETH_WALLET_PRIVATE_KEY=
 ETH_GATEWAY_URL=
 ETH_API_KEY=
 ETH_EXPLORER_URL=
-BNB_WALLET_ADDRESS=
-BNB_WALLET_PRIVATE_KEY=
-BNB_GATEWAY_URL=
-BNB_API_KEY=
-BNB_EXPLORER_URL=
+BSC_WALLET_ADDRESS=
+BSC_WALLET_PRIVATE_KEY=
+BSC_GATEWAY_URL=
+BSC_EXPLORER_URL=
 LETTER_USER=
 LETTER_AUTH=
 LETTER_URL=
