[DEV-618] Updated .env example

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,8 @@ NODE_INP_URL_ACTIVE=
 NODE_DEX_URL_ACTIVE=
 NODE_OUT_URL_ACTIVE=
 NODE_REF_URL_ACTIVE=
+NODE_BTC_INP_URL_ACTIVE=
+NODE_BTC_OUT_URL_ACTIVE=
 NODE_WALLET_PASSWORD=
 DEX_WALLET_ADDRESS=
 OUT_WALLET_ADDRESS=
