--- a/.env.example
+++ b/.env.example
@@ -36,9 +36,13 @@ ETH_WALLET_ADDRESS=
 ETH_WALLET_PRIVATE_KEY=
 ETH_GATEWAY_URL=
 ETH_API_KEY=
+ETH_SWAP_CONTRACT_ADDRESS=
+ETH_SWAP_TOKEN_ADDRESS=
 BSC_WALLET_ADDRESS=
 BSC_WALLET_PRIVATE_KEY=
 BSC_GATEWAY_URL=
+BSC_SWAP_CONTRACT_ADDRESS=
+BSC_SWAP_TOKEN_ADDRESS=
 LETTER_USER=
 LETTER_AUTH=
 LETTER_URL=
