[DEV-1034] Fix unit test and at develop to run the tests during feature PRs

--- a/.github/workflows/api-pr.yaml
+++ b/.github/workflows/api-pr.yaml
@@ -2,8 +2,9 @@ name: API PR CI
 
 on:
   pull_request:
-    branches:    
+    branches:
       - master
+      - develop
   workflow_dispatch:
 
 env:
