[DEV-1146] Added more unit tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,38 +1,44 @@
 {
   "cSpell.words": [
-    "APPINSIGHTS",
+    "appinsights",
     "authorises",
-    "Bitpanda",
-    "Bitstamp",
+    "bitpanda",
+    "bitstamp",
     "ccxt",
+    "chainalysis",
     "chargeback",
     "citizenships",
-    "Datas",
+    "datas",
     "datetime",
-    "DEFICHAIN",
-    "DFIP",
+    "defichain",
+    "dfip",
     "firstname",
+    "frick",
     "golevelup",
-    "IBAN",
-    "INSTRUMENTATIONKEY",
-    "Kauf",
+    "iban",
+    "instrumentationkey",
+    "kauf",
     "masternode",
     "masternodes",
+    "mydefichain",
     "nestjs",
     "oflags",
+    "olky",
+    "olkypay",
     "orderbook",
-    "Organisation",
+    "organisation",
     "originalname",
     "phonenumber",
     "respository",
     "sendgrid",
+    "sepa",
     "signmessage",
     "timelock",
     "txid",
     "typeorm",
     "utxo",
-    "Utxos",
-    "Verkauf",
+    "utxos",
+    "verkauf",
     "vout"
   ],
   "files.exclude": {
