[DEV-1211] added API keys to optimism and arbitrum

--- a/.env.example
+++ b/.env.example
@@ -46,11 +46,13 @@ BSC_SWAP_TOKEN_ADDRESS=
 OPTIMISM_WALLET_ADDRESS=
 OPTIMISM_WALLET_PRIVATE_KEY=
 OPTIMISM_GATEWAY_URL=
+OPTIMISM_API_KEY=
 OPTIMISM_SWAP_CONTRACT_ADDRESS=
 OPTIMISM_SWAP_TOKEN_ADDRESS=
 ARBITRUM_WALLET_ADDRESS=
 ARBITRUM_WALLET_PRIVATE_KEY=
 ARBITRUM_GATEWAY_URL=
+ARBITRUM_API_KEY=
 ARBITRUM_SWAP_CONTRACT_ADDRESS=
 ARBITRUM_SWAP_TOKEN_ADDRESS=
 LETTER_USER=
