[DEV-1211] Optimism and Arbitrum (#579)
* [DEV-1211] added integration layer

* [DEV-1211] added DEX strategy classes

* [DEV-1211] all strategy classes added

* [DEV-1211] fixed the tests

* [DEV-1211] fixed module imports

* [DEV-1211] defaulted optimism payout fees to 0

* [DEV-1211] restricted test swaps for arbitrum and optimism

* [DEV-1211] added API keys to optimism and arbitrum

* [DEV-1211] added ENV configuration

* [DEV-1211] implemented relevant usages of new EVM blockchians

--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,18 @@ BSC_WALLET_PRIVATE_KEY=
 BSC_GATEWAY_URL=
 BSC_SWAP_CONTRACT_ADDRESS=
 BSC_SWAP_TOKEN_ADDRESS=
+OPTIMISM_WALLET_ADDRESS=
+OPTIMISM_WALLET_PRIVATE_KEY=
+OPTIMISM_GATEWAY_URL=
+OPTIMISM_API_KEY=
+OPTIMISM_SWAP_CONTRACT_ADDRESS=
+OPTIMISM_SWAP_TOKEN_ADDRESS=
+ARBITRUM_WALLET_ADDRESS=
+ARBITRUM_WALLET_PRIVATE_KEY=
+ARBITRUM_GATEWAY_URL=
+ARBITRUM_API_KEY=
+ARBITRUM_SWAP_CONTRACT_ADDRESS=
+ARBITRUM_SWAP_TOKEN_ADDRESS=
 LETTER_USER=
 LETTER_AUTH=
 LETTER_URL=
