--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@defichain/jellyfish-api-jsonrpc": "^2.18.3",
     "@defichain/jellyfish-network": "^2.18.3",
     "@defichain/whale-api-client": "^0.33.4",
+    "@meshsdk/core": "^1.3.0",
     "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/axios": "^0.0.5",
     "@nestjs/common": "^8.3.1",
