[DEV-1252] changed import of meshsdk

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "authorises",
     "bitpanda",
     "bitstamp",
+    "cardano",
     "ccxt",
     "chainalysis",
     "chargeback",
@@ -20,6 +21,7 @@
     "kauf",
     "masternode",
     "masternodes",
+    "meshsdk",
     "mydefichain",
     "nestjs",
     "oflags",
