--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@cardano-foundation/cardano-verify-datasignature": "^1.0.11",
     "@defichain/jellyfish-api-core": "^2.18.3",
     "@defichain/jellyfish-api-jsonrpc": "^2.18.3",
     "@defichain/jellyfish-network": "^2.18.3",
     "@defichain/whale-api-client": "^0.33.4",
-    "@meshsdk/core": "^1.3.0",
     "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/axios": "^0.0.5",
     "@nestjs/common": "^8.3.1",
