--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@cardano-foundation/cardano-verify-datasignature": "^1.0.11",
     "@defichain/jellyfish-api-core": "^2.18.3",
     "@defichain/jellyfish-api-jsonrpc": "^2.18.3",
     "@defichain/jellyfish-network": "^2.18.3",
