[DEV-616] implemnted evm key encryption and usage

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,7 @@ OUT_WALLET_ADDRESS=
 INT_WALLET_ADDRESS=
 STAKING_WALLET_ADDRESS=
 UTXO_SPENDER_ADDRESS=
+EVM_ENCRYPTION_KEY=abc123
 ETH_WALLET_ADDRESS=
 ETH_WALLET_PRIVATE_KEY=
 ETH_GATEWAY_URL=
