--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "fast-xml-parser": "^4.0.3",
     "handlebars": "^4.7.7",
     "helmet": "^5.0.2",
+    "ibantools": "^4.2.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mssql": "^6.3.1",
