--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@defichain/jellyfish-api-jsonrpc": "^2.70.0",
     "@defichain/jellyfish-network": "^2.70.0",
     "@defichain/whale-api-client": "^0.33.4",
+    "@eth-optimism/sdk": "^1.10.1",
     "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/axios": "^0.0.5",
     "@nestjs/common": "^8.3.1",
