--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "baseUrl": "./",
     "incremental": true,
     "resolveJsonModule": true,
+    "esModuleInterop": true,
     "skipLibCheck": true
   }
 }
