[DEV-1337] add phone validator

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express-useragent": "^1.0.15",
     "fast-geoip": "^1.1.70",
     "fast-xml-parser": "^4.0.3",
+    "google-libphonenumber": "^3.2.32",
     "handlebars": "^4.7.7",
     "helmet": "^5.0.2",
     "ibantools": "^4.2.2",
@@ -80,6 +81,7 @@
     "@nestjs/testing": "^8.3.1",
     "@types/express": "^4.17.13",
     "@types/express-useragent": "^1.0.2",
+    "@types/google-libphonenumber": "^7.4.23",
     "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.182",
     "@types/multer": "^1.4.7",
