[DEV-1242] implemented very rough version of l1/l2 transaction checks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,8 +44,8 @@
     "verkauf",
     "vout"
   ],
+  "prettier.printWidth": 120,
   "files.exclude": {
     "node_modules": true
-  },
-  "prettier.printWidth": 120
+  }
 }
