[DEV-1242, DEV-1206, DEV-1300] EVM bridge integrations, LM Exchange integration, LM external API (#678)
* [DEV-1242] work in progress on EVM l2 bridge

* [DEV-616] implemented LM side

* [DEV-616] implemented generic buy/sell API on liquidity management module

* [DEV-1242] implemented very rough version of l1/l2 transaction checks

* [DEV-1242] restructured LM adapters

* [DEV-1242] work in progress on ccxt adapters

* [DEV-1242] preliminary finished exchange adapters

* [DEV-1242] implemented most of new DEX functionality for LM

* [DEV-1242] saving error message to a failed order

* [DEV-1242] created migration

* [DEV-1242] implemented findTransaction API on DEX

* [DEV-1242] implemented chaining of orders for LM

* [DEV-1242] simple attempt of estimating arbitrum transactions

* [DEV-1242] added findTransaction implementation for Bitcoin

* [DEV-1242] added thunder requests for LM api

* [DEV-1242] adjusted provius order reference

* [DEV-1242] fixes in lm command processing logic

* [DEV-1242] fixes dex logic for recording completion data

* [DEV-1242] arbitrum fees work

* [DEV-1242] adjusted rule input dto validation

* [DEV-1242] improved order completion check error log

* [DEV-1242] Optimism bridging works

* [DEV-1242] Arbitrum bridging works - erc20 not e2e testable

* [DEV-1242] fixed linting errors

* [DEV-1242] added env variables

* [DEV-1242] addressed PR comments

* [DEV-1242] after merge fixes

* [DEV-1242] fixed rule reactivation message

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
     "appinsights",
+    "arbitrum",
     "authorises",
     "bitpanda",
     "bitstamp",
@@ -44,8 +45,8 @@
     "verkauf",
     "vout"
   ],
+  "prettier.printWidth": 120,
   "files.exclude": {
     "node_modules": true
-  },
-  "prettier.printWidth": 120
+  }
 }
