--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
     "vout"
   ],
   "prettier.printWidth": 120,
+  "editor.formatOnSave": true,
   "files.exclude": {
     "node_modules": true
   }
