--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ccxt": "^3.0.43",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "coingecko-api": "^1.0.10",
     "cors": "^2.8.5",
     "ethers": "^5.7.2",
     "express-useragent": "^1.0.15",
@@ -82,6 +83,7 @@
     "@nestjs/cli": "^9.3.0",
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.3.12",
+    "@types/coingecko-api": "^1.0.10",
     "@types/express": "^4.17.17",
     "@types/express-useragent": "^1.0.2",
     "@types/google-libphonenumber": "^7.4.23",
