--- a/package.json
+++ b/package.json
@@ -10,18 +10,14 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "seed": "node migration/seed/seed.js",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:develop": "SET NODE_ENV=develop& node dist/main",
+    "start": "nest start --debug --watch",
     "start:prod": "SET NODE_ENV=master& node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --no-fix",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --silent",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "check": "npm run lint && npm run test"
   },
   "dependencies": {
     "@arbitrum/sdk": "^3.0.0",
