--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@defichain/jellyfish-api-jsonrpc": "^3.30.1",
     "@defichain/jellyfish-network": "^3.30.1",
     "@defichain/whale-api-client": "^3.30.1",
-    "@eth-optimism/sdk": "^2.0.1",
+    "@eth-optimism/sdk": "^2.0.2",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.3.12",
@@ -40,6 +40,9 @@
     "@nestjs/throttler": "^4.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@supercharge/request-ip": "^1.2.0",
+    "@uniswap/sdk-core": "^3.2.2",
+    "@uniswap/smart-order-router": "^3.11.3",
+    "@uniswap/v3-sdk": "^3.9.0",
     "applicationinsights": "^2.5.1",
     "axios": "^1.3.4",
     "basic-ftp": "^5.0.2",
@@ -59,6 +62,7 @@
     "handlebars": "^4.7.7",
     "helmet": "^6.0.1",
     "ibantools": "^4.2.2",
+    "jsbi": "^3.2.5",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mssql": "^9.1.1",
