--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@supercharge/request-ip": "^1.2.0",
     "@uniswap/sdk-core": "^3.2.2",
     "@uniswap/smart-order-router": "^3.11.3",
-    "@uniswap/v3-sdk": "^3.9.0",
+    "@uniswap/v3-sdk": "^3.8.3",
     "applicationinsights": "^2.5.1",
     "axios": "^1.3.4",
     "basic-ftp": "^5.0.2",
@@ -52,7 +52,7 @@
     "ccxt": "^3.0.43",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "coingecko-api": "^1.0.10",
+    "coingecko-api-v3": "^0.0.25",
     "cors": "^2.8.5",
     "ethers": "^5.7.2",
     "express-useragent": "^1.0.15",
@@ -83,7 +83,6 @@
     "@nestjs/cli": "^9.3.0",
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.3.12",
-    "@types/coingecko-api": "^1.0.10",
     "@types/express": "^4.17.17",
     "@types/express-useragent": "^1.0.2",
     "@types/google-libphonenumber": "^7.4.23",
