--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "helmet": "^6.0.1",
     "ibantools": "^4.2.2",
     "jsbi": "^3.2.5",
+    "lnurl": "^0.24.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mssql": "^9.1.1",
