[DEV-1521] Updated LNbits config, renamed Bicep variable, refactoring

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
     "instrumentationkey",
     "kauf",
     "kucoin",
+    "lnurl",
+    "lnurlp",
     "masternode",
     "masternodes",
     "meshsdk",
