[NO-TASK] Added auto import-cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,10 @@
   ],
   "prettier.printWidth": 120,
   "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true,
+    "source.sortMembers": true
+  },
   "files.exclude": {
     "node_modules": true
   }
