[DEV-1521]: added LNURLp forwarding (#785)
* [DEV-1521]: added LNURLp forwarding

* [DEV-1521]: added constructor parameters

* [DEV-1521] Updated infrastructure

* [DEV-1521] Updated parameter files

* [DEV-1521]: Refactoring after Review

* [DEV-1521] Updated setup instructions

* [DEV-1521] Updated LNbits config, renamed Bicep variable, refactoring

* [DEV-1521]: change signature verification

* [DEV-1521]: change balance from milli-sats to btc

* [DEV-1521] Added PRD configs

* [DEV-1521] Refactoring

* [DEV-1521] Re-added comment

---------

Co-authored-by: David May <david.leo.may@gmail.com>

--- a/infrastructure/config/lightning/lnd/prd.conf
+++ b/infrastructure/config/lightning/lnd/prd.conf
@@ -3,7 +3,8 @@ debuglevel=debug
 maxpendingchannels=10
 rpclisten=0.0.0.0:10009
 restlisten=0.0.0.0:8080
-tlsextradomain=vm-dfx-btc-inp-loc.westeurope.cloudapp.azure.com
+tlsextraip=[PRIVATE_IP]
+tlsextradomain=vm-dfx-btc-inp-prd.westeurope.cloudapp.azure.com
 tlsdisableautofill=true
 
 # Kraken
