[DEV-1545 & DEV-1556 & DEV-1553] Alby API, login with node pub key

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "alby",
     "appinsights",
     "arbitrum",
     "authorises",
@@ -20,7 +21,9 @@
     "iban",
     "instrumentationkey",
     "kauf",
+    "keysend",
     "kucoin",
+    "lnnid",
     "lnurl",
     "lnurlp",
     "masternode",
